--- a/app/views/templates/moreProDtls.html
+++ b/app/views/templates/moreProDtls.html
@@ -1,26 +1,26 @@
 <div container-fluid>
 <div class="row">
   <div class="col-lg-2"></div>
-	<div class="col-lg-8" style="border: 3px solid #999; border-radius: 15px; height: 568px">
+	<div class="col-lg-8" style="border: 3px solid #999; border-radius: 15px; height: inherit">
 		<div style="margin-top:20px">
 		<span><b><u>Broun Rice Nutrition Facts :</u></b></span>
-		<p style="margin-left:35px; color:brown; font-size:15px;margin-top:5px">
-		         One cup of brown rice contain nutrion:-</br>
-                 ->calories:215       </br>                                          
-                 ->proteins:1.74g     </br>                                          
-                 ->fat     :44.42g    </br>                                          
-                 ->carbohydrets:4.99g </br>
-                 ->Sodium  :587mg      </br>
-                 ->Potassium :84mg    </br>
-                 ->Iron    :5%        </br>
-                 ->Zinc    :65.6g     </br>
-                 ->fiber   : 3.5g  </br>
-                 Brown rice is a healthier choice than white rice for most people due to brown rice's higher fiber, magnesium and zinc content.
-                 the milling process converts brown rice to white rice. This process removes the bran and the germ as well as fiber, vitamins and minerals. meaning iron and some of the B-vitamins including thiamin, riboflavin, niacin and folic acid are added to white rice to boost the nutrient content.</br>
-                 ->according to the USDA Food and Nutrient Database. Magnesium is a mineral important for bone health and helps you derive energy from the food you eat.</br>
+		<p style="margin-left:35px; color:brown; font-size:15px;margin-top:5px;text-align: justify;">
+		         <u><b>One cup of brown rice contain nutrion :</b></u></br>
+                  &#8226 &nbsp calories:215       </br>                                          
+                  &#8226&nbsp  proteins:1.74g     </br>                                          
+                  &#8226&nbsp fat     :44.42g    </br>                                          
+                  &#8226&nbsp carbohydrets:4.99g </br>
+                  &#8226&nbsp Sodium  :587mg      </br>
+                  &#8226&nbsp Potassium :84mg    </br>
+                  &#8226&nbsp Iron    :5%        </br>
+                  &#8226&nbsp Zinc    :65.6g     </br>
+                  &#8226&nbsp fiber   : 3.5g  </br></br>
+                 &nbsp&nbsp&nbsp&nbspBrown rice is a healthier choice than white rice for most people due to brown rice's higher fiber, magnesium and zinc content.
+                  The milling process converts brown rice to white rice. This process removes the bran and the germ as well as fiber, vitamins and minerals. meaning iron and some of the B-vitamins including thiamin, riboflavin, niacin and folic acid are added to white rice to boost the nutrient content.</br>
+                  &nbsp&nbsp&nbsp&nbspAccording to the USDA Food and Nutrient Database. Magnesium is a mineral important for bone health and helps you derive penergy from the food you eat.</br>
         </p>
        <div>
-       <img height="140" width="800" style="margin-left:95px" src="\images\logo.jpg">
+       <img  src="\images\logo.jpg" style="width: 878px;height: 297px;margin-bottom: 16px;">
        </div>
        <div>
          <button class="btn btn-lg btn-primary" ng-click="Back();">< Back</button>
