--- a/app/views/templates/moreProDtls2.html
+++ b/app/views/templates/moreProDtls2.html
@@ -1,23 +1,23 @@
 <div container-fluid>
 <div class="row">
 <div class="col-lg-2"></div>
-<div class="col-lg-8" style="border: 3px solid #999; border-radius: 15px; height: 568px">
+<div class="col-lg-8" style="border: 3px solid #999; border-radius: 15px; height: inherit">
         <div style="margin-top:20px">
 		<span><b><u>Semi Polished Rice Nutrition Facts :</u></b></span>
-		<p style="margin-left:35px; color:brown; font-size:15px;margin-top:5px">
-		 One cup of Semi Polished rice contain nutrion:-</br>
-		         ->calories:206       </br>                                          
-                 ->proteins:1.74g     </br>                                          
-                 ->fat     :44.42g    </br>                                          
-                 ->carbohydrets:2.89g </br>
-                 ->Sodium  :484mg      </br>
-                 ->Potassium :63mg    </br>
-                 ->Iron    :5%        </br>
-                 ->Zinc    :43.6g     </br>
-                 ->fiber :2.3g</br>
-		 Rice is usually threshed and polished after harvesting. Semi-polished rice, which still has the whole germ, contains most of the grain’s original vitamins B1, B2, and E.</br>
-	        In this manner, its storage capacity is increased while retaining the nutrients like thiamin,riboflavin, niacin, and iron.
-                Organically grown fine grain rice,which is semi polished retaining fine layer over the grain which is rich in vit B and a good source of Roughage.
+		<p style="margin-left:35px; color:brown; font-size:15px;margin-top:5px;text-align: justify;">
+		<u><b> One cup of Semi Polished rice contain nutrion:</b></u></br>
+		         &#8226 &nbspcalories:206       </br>                                          
+                 &#8226 &nbspproteins:1.74g     </br>                                          
+                 &#8226 &nbspfat     :44.42g    </br>                                          
+                 &#8226 &nbspcarbohydrets:2.89g </br>
+                 &#8226 &nbspSodium  :484mg      </br>
+                 &#8226 &nbspPotassium :63mg    </br>
+                 &#8226 &nbspIron    :5%        </br>
+                 &#8226 &nbspZinc    :43.6g     </br>
+                 &#8226 &nbspfiber :2.3g</br></br>
+		  &nbsp&nbsp&nbsp&nbsp&nbspRice is usually threshed and polished after harvesting. Semi-polished rice, which still has the whole germ, contains most of the grain’s original vitamins B1, B2, and E.</br>
+	      &nbsp&nbsp&nbsp&nbsp&nbspIn this manner, its storage capacity is increased while retaining the nutrients like thiamin,riboflavin, niacin, and iron.
+        Organically grown fine grain rice,which is semi polished retaining fine layer over the grain which is rich in vit B and a good source of Roughage.
 		</p>
         </div>
          <div style="margin-top:130px">
