--- a/app/views/templates/moreProDtls3.html
+++ b/app/views/templates/moreProDtls3.html
@@ -1,23 +1,23 @@
 <div container-fluid>
 <div class="row">
 <div class="col-lg-2"></div>
-<div class="col-lg-8" style="border: 3px solid #999; border-radius: 15px; height: 568px">
+<div class="col-lg-8" style="border: 3px solid #999; border-radius: 15px; height: inherit">
 <div style="margin-top:20px">
                 <span><b><u>Fully Polished Rice Nutrition Facts :</u></b></span>
-                <p style="margin-left:35px; color:brown; font-size:15px;margin-top:5px">
-                 One cup of Fully Polished rice contain nutrion:-</br>
-                         ->calories:186      </br>                                          
-                 ->proteins:1.5g     </br>                                          
-                 ->fat     :44.42g    </br>                                          
-                 ->carbohydrets:1.85g </br>
-                 ->Sodium  :1.6mg      </br>
-                 ->Potassium :50.3mg    </br>
-                 ->Iron    :1%        </br>
-                 ->Zinc    :32.6g     </br>
-                 ->fiber :0.6g</br>
-                 Since white rice is low in fibre.</br>
-                 The polishing processes of white rice removes most of the important vitamins and other nutrients from it.</br>
-                 So WHO suggests and recommends that brown rice. </br>
+                <p style="margin-left:35px; color:brown; font-size:15px;margin-top:5px;text-align: justify;">
+                 <u><b>One cup of Fully Polished rice contain nutrion:</b></u></br>
+                 &#8226 &nbspcalories:186      </br>                                          
+                 &#8226 &nbspproteins:1.5g     </br>                                          
+                 &#8226 &nbspfat     :44.42g    </br>                                          
+                 &#8226 &nbspcarbohydrets:1.85g </br>
+                 &#8226 &nbspSodium  :1.6mg      </br>
+                 &#8226 &nbspPotassium :50.3mg    </br>
+                 &#8226 &nbspIron    :1%        </br>
+                 &#8226 &nbspZinc    :32.6g     </br>
+                 &#8226 &nbspfiber :0.6g</br></br>
+                 &nbsp &nbsp &nbspSince white rice is low in fibre.</br>
+                &nbsp &nbsp  &nbspThe polishing processes of white rice removes most of the important vitamins and other nutrients from it.</br>
+                &nbsp &nbsp  &nbspSo WHO suggests and recommends that brown rice. </br>
                 </p>
          </div>
           <div style="margin-top:130px">
