--- a/app/views/templates/productDtls.html
+++ b/app/views/templates/productDtls.html
@@ -1,14 +1,14 @@
 <div container-fluid>
 <div class="row">
 	<div class="col-lg-2"></div>
-	<div class="col-lg-8" style="border: 3px solid #999; border-radius: 15px; height: 570px">
+	<div class="col-lg-8" style="border: 3px solid #999; border-radius: 15px; max-height:inherit">
 	<div class="row">
 	   <div class="col-lg-2" style="background-color:#ffffff;margin-top:10px;">
 	  	  <b><u style="padding:5px"> Brown Rice </u></b>
-	      <img height="110" width="180" src="images/brown-rice.jpg"> 
+	      <img  src="images/brown-rice.jpg" style="width: 184px; height: 133px;margin-top: 8px;"> 
      </div>
-      <div class="col-lg-10" style="margin-top: 30px">
-      	  <span><b style="padding:20px; color:#ff4d4d"> Benfits :</b></span>
+      <div class="col-lg-10" style="margin-top: 40px;padding-left: 18px;">
+      	  <span><b style="color:#ff4d4d;padding-left: 39px;"> Benfits :</b></span>
           <p style="margin-left:35px; color: #86592d; font-size:15px"> 
              1.Brown rice acts as an excellent source of protection against breast cancer. </br>
              2.Brown rice also has a lower glychemic index than most grains which leads to stable blood glucose levels.</br>
@@ -24,31 +24,39 @@
           <legend style="background-color:#cccc00"></legend>
 	</div>
   <div class="row">
-     <div class="col-lg-2" style="background-color:#ffffff;margin-top:10px;">
-        <b><u style="padding:3px">Semi Polished Rice</u></b>
-        <img height="110" width="180" src="images/semi-polished.jpg"> 
-     </div>
-      <div class="col-lg-10" style="margin-top: 30px">
-          <span><b style="padding:20px; color:#ff4d4d"> Benfits :</b></span>
-          <p style="margin-left:35px; color: #86592d; font-size:15px"> 
-             1.The Organic Semi-Brown Rice Health meets Taste buds. The Texture is good, so does the taste.</br>
-             2.Semi-polished rice, which still has the whole germ, contains most of the grain’s original vitamins B1, B2, and E.</br>
-             3.They fall in between Fully polished and Unpolished rice.</br>
-             4.Semi polished retaining fine layer over the grain .</br>
-             5.Semi-polished balance health and taste.
-             <button class="btn btn-sm pull-right" ng-click="Order();" style="background-color:#808080;font-size:14px; color:#ffffff; margin-left:2px">Order it</button>
-             <button class="btn btn-sm pull-right" ng-click="spDtls();" style="background-color:#808080;font-size:14px;color:#ffffff">More >></button></br>
-          </p> 
+      <div class="col-lg-3" style="background-color:#ffffff;margin-top:10px;">
+            <b><u style="padding:5px">Semi Polished Rice</u></b>
       </div>
-          <legend style="background-color:#cccc00"></legend>
-  </div>
+  </div>    
   <div class="row">
-     <div class="col-lg-2" style="background-color:#ffffff;margin-top:10px;">
+          <div class="col-lg-2" style="background-color:#ffffff;margin-top:10px;">
+              <img src="images/semi-polished.jpg" style="width: 184px; height: 147px;"> 
+          </div>
+          <div class="col-lg-10" style="margin-top: 12px;padding-left: 18px;">
+             <span><b style="padding:38px; color:#ff4d4d"> Benfits :</b></span>
+              <p style="margin-left:35px; color: #86592d; font-size:15px"> 
+                  1.The Organic Semi-Brown Rice Health meets Taste buds. The Texture is good, so does the taste.</br>
+                    2.Semi-polished rice, which still has the whole germ, contains most of the grain’s original vitamins B1, B2, and E.</br>
+                    3.They fall in between Fully polished and Unpolished rice.</br>
+                    4.Semi polished retaining fine layer over the grain .</br>
+                    5.Semi-polished balance health and taste.
+                    <button class="btn btn-sm pull-right" ng-click="Order();" style="background-color:#808080;font-size:14px; color:#ffffff; margin-left:2px">Order it</button>
+                    <button class="btn btn-sm pull-right" ng-click="spDtls();" style="background-color:#808080;font-size:14px;color:#ffffff">More >></button></br>
+              </p> 
+          </div>
+              <legend style="background-color:#cccc00"></legend>
+    </div>
+  <div class="row">
+     <div class="col-lg-3" style="background-color:#ffffff;margin-top:10px;">
        <b><u style="padding:3px">Fully Polished Rice</u></b>
-       <img height="110" width="180" src="images/white-rice.jpg"> 
+      </div>
+   </div>
+    <div class="row"> 
+    <div class="col-lg-2" style="background-color:#ffffff;margin-top:10px;">  
+       <img src="images/white-rice.jpg" style="width: 184px; height: 133px;"> 
      </div>
-      <div class="col-lg-10" style="margin-top: 30px">
-          <span><b style="padding:20px; color:#ff4d4d"> Benfits :</b></span>
+      <div class="col-lg-10" style="margin-top: 12px;padding-left: 18px;">
+          <span><b style="padding:37px; color:#ff4d4d"> Benfits :</b></span>
           <p style="margin-left:35px; color: #86592d; font-size:15px">
              1.The polishing processes of white rice removes most of the important vitamins and other nutrients from it.</br> 
              2.white rice is low in fibre.</br>
