--- a/app/views/templates/account.html
+++ b/app/views/templates/account.html
@@ -11,38 +11,47 @@
 					 	<div class="col-lg-6"></div>
 					 	<div class="col-lg-6">
 					 		<label style=" font-size: small" >User-id:123</label>
-					 		<a href="javascript:" on-click="changePwd();" style="width:108px; padding-left:  37px;font-size: small; margin-right: 18px;">Change Password ?</a>
+					 		<a href="javascript:" on-click="changePwd();" style="width:108px; padding-left:  37px;font-size: small; margin-right: 18px; ">Change Password ?</a>
 					 	</div>
 						<div class="row">
-					 	   <div class="col-lg-12">
-					 			<label style="margin-left: 42px">First Name :</label>
-					 			<span><input type="text" name="text" value="suma" disabled style="width:104px"></span>
+					 	   <div class="col-lg-12" style="margin-bottom: 5px;">
+					 			<label style="margin-left: 42px">First Name :</label>{{accDtl.firstName}}
+					 
 					 		</div>
 					 	</div>
 					 	<div class="row">
-					 	   <div class="col-lg-12">
-					 			<label style="margin-left: 42px">Last Name :</label>
-					 			<span><input type="text" name="text" value="latha" disabled style="width:104px"></span>
+					 	   <div class="col-lg-12" style="margin-bottom: 5px;">
+					 			<label style="margin-left: 42px">Last Name :</label>{{accDtl.lastName}}
+					 			
 					 		</div>
 					 	</div>
 					 	<div class="row">
-					 	   <div class="col-lg-12">
-					 			<label style="margin-left:12px">Phone Number :</label>
-					 			<span><input type="text" name="text" value="9963922160" disabled style="width:104px"></span>
+					 	   <div class="col-lg-12" style="margin-bottom: 5px;">
+					 			<label style="margin-left:12px">Phone Number :</label>{{accDtl.phone}}
+					 			
 					 		</div>
 					 	</div>
 					 	<div class="row">
-					 	   <div class="col-lg-12">
-					 			<label style="margin-left: 71px">E-mail :</label>
-					 			<span><input type="text" name="text" value="sumalathaeslavath@gmail.com" disabled style="width:204px"></span>
+					 	   <div class="col-lg-12" style="margin-bottom: 5px;">
+					 			<label style="margin-left: 71px">E-mail :</label>{{accDtl.email}}
+					 			
 					 		</div>
 					 	</div>
 					 	<div class="row">
-					 	   <div class="col-lg-12">
-					 			<label style="margin-left:55px">Address :</label>
-					 			<span><input type="text" name="text" value="Nimmapally" disabled style="width:204px;padding-bottom: 58px;"></span>
+					 	   <div class="col-lg-3" style="margin-bottom: 5px;">
+                             	<label style="margin-left:55px">Address:</label>  
+                            </div> 
+                            <div lass="col-lg-9" style="padding-left: 138px;">
+					 			<div ng-repeat="addr in accDtl.address" >
+					 				<span>{{addr.addressLine1}}</span><br>
+					 				<span>{{addr.addressLine2}}</span><br>
+					 				<span>{{addr.city}}</span><br>
+					 				<span>{{addr.pin}}</span><br>
+					 				<span>{{addr.state}}</span><br>
+					 			 
+					 		 	</div>
 					 		</div>
-					 	</div>
+					 	</div>	
 
 					 	<div class="row">
 					 	<div class="col-lg-6">
