--- a/app/views/templates/placeorder.html
+++ b/app/views/templates/placeorder.html
@@ -1,105 +1,100 @@
 <div class="container-fluid">
 <div class="row">
   <div class="col-lg-2"></div>
-   <div class="col-lg-8" style="border: 3px solid #999; border-radius: 15px; height: 570px">
-   <div class="col-lg-8">
-   <fieldset style="border: 2px solid #c0c0c0 !important;margin-top:15px;padding: 0.35em 0.625em 0.75em;background-color: #ffffff;border-radius: 5px">
-   <div style="margin-bottom:15px;color:grey"><u><b>Place Order </b></u></div>
-    	<div style="margin-bottom:5px">
-    		<label class="lbl">Rice type :</label>
-      		<select>
-      		   <option value="--Select--">--Select--</option>
-               <option value="Brown Rice">Brown Rice</option>
-               <option value="Semi Polished Rice">Semi Polished Rice</option>
-               <option value="Fully Polished Rice">Fully Polished Rice</option>
-            </select>
-    	</div>
-    	<div style="margin-bottom:5px">
-    		<label class="lbl">Quantity :</label>
-    		<select style="margin-left:6px;width:143px">
-      		   <option value="--Select--">--Select--</option>
-               <option value="5kgs">5 kgs</option>
-               <option value="10kgs">10 kgs</option>
-               <option value="25kgs">25 kgs</option>
-               <option value="10kgs">50 kgs</option>
-               <option value="25kgs">75 kgs</option>
-               <option value="10kgs">100 kgs</option>
-            </select>
-    	</div>  
-    	<div style="margin-bottom:5px">
-    		<label class="lbl">Amount :</label>
-    	</div>
-    	<div>
-    		<table class="table table-bordered table-hover table-striped ">
-	   	  <thead>
-	   	  	<tr>
-	   	  		<th>S.no</th>
-	   	  		<th>Rice Type</th>
-	   	  		<th>Quantity</th>
-	   	  		<th>Amount</th>
-	   	  		<th>Add/Remove</th>
-	   	  	</tr>
-	   	  </thead>	
-	   	  <tbody>
-	   	  	<tr>
-	   	  		<td><center>1</center></td>
-	   	  		<td><center>Brown Rice</center></td>
-	   	  		<td><center>25kgs</center></td>
-	   	  		<td>Rs :</td>
-	   	  		<td></td>
-	   	  	</tr>
-	   	  	<tr>
-	   	  		<td colspan="5"><center><b  style="margin-left:20px">Total Amount :</b></center></td>
-	   	  	</tr>
-	   	  </tbody>
-	   	</table>
-    	</div>
-    	<fieldset style="border: 2px solid #c0c0c0 !important;margin-top:15px;padding: 0.35em 0.625em 0.75em;background-color: #ffffff;border-radius: 5px">
-    	<div style="margin-bottom:5px">
-    		<label class="lbl">Shipping Address :</label>
-        </div>
-        <div style="margin-left:50px; margin-bottom:5px">
-        	<label class="lbl"> Line1:</label>
-        	<input type="text" name="add" ng-model="Line1">
-		    </div>
-		<div style="margin-left:50px; margin-bottom:5px">
-        	<label class="lbl"> Line2:</label>
-        	<input type="text" name="add" ng-model="Line2">
-		</div>
-		<div class="row">
-		<div class="col-lg-6" style="margin-left:50px; margin-bottom:5px">
-        	<label class="lbl"> City :</label>
-        	<select style="margin-left:8px;width:172px">
-        		<option value="Hyd">Hyderabad</option>
-        		<option value="wgl">Warngal</option>
-        		<option value="Knr">Karimnagar</option>
-        		<option value="Crl">Circilla</option>
-        	</select>
-		</div>
-		<div class="col-lg-6" style="margin-left:49px">
-			<label class="lbl">State :</label>
-			<select>
-				<option value="TS">Telangana</option>
-				<option value="AP">Andrapradesh</option>
-			</select>
-		</div>
-		</div>
-		<div style="margin-left:60px;margin-bottom:5px">
-        	<label class="lbl"> Pin :</label>
-        	<input type="text" name="AreaPin" ng-model="AreaPin" maxlength="6">
-		</div>
-		<div style="margin-left:36px; margin-bottom:5px">
-        	<label class="lbl"> Mobile :</label>
-        	<input type="text" name="Mobile" ng-model="Mobile" maxlength="10">
-		</div>
-    	</fieldset>
-    	<div style="margin-left:50px;margin-top:5px">
-    		<button class="btn btn-strong"> Submit </button>
-    		<button class="btn btn-strong" style="margin-left:270px" > Cancel </button>
-    	</div>
-    	</fieldset>
-    </div>   	
-    </div>    
-  <div class="col-lg-2"></div>
+   <div class="col-lg-8" style="border: 3px solid #999; border-radius: 15px;min-height: 570px;
+    max-height: inherit;">
+    <center>
+      <div style=" margin-top:10px;color:grey;font-size: 16px;"><u><b>Place Order </b></u></div>
+    </center>
+   <div class="row">
+        <div class="col-lg-2"></div>
+        <div class="col-lg-8">
+            <fieldset style="border: 2px solid #c0c0c0 !important;margin-top:15px;padding: 0.35em 0.625em 0.75em;background-color:#f1f2f3;border-radius: 5px;margin-bottom: 15px;">
+                
+                      <div style="margin-bottom:5px ;margin-top:5px;">
+    		                    <label>Rice type :</label>
+      		                  <select  name="riceType" ng-model="riceType">
+                                <option value="--select--" >--select--</option>
+                                <option value="Brown Rice" >Brown Rice</option>
+                                <option value="Semi Polished Rice">Semi Polished Rice</option>
+                                <option value="Fully Polished Rice">Fully Polished Rice</option>
+                            </select>
+                     </div>
+
+                    <div class="row" style="margin-bottom:5px">
+                      <div class="col-lg-12">
+    		                  <label style="padding-left: 5px;" >Quantity :</label>
+                          <select name ="quantity" ng-model="quantity" style="width:146px">
+                              <option value="--select--" >--select--</option>
+                              <option value="5">5 kgs</option>
+                              <option value="10">10 kgs</option>
+                              <option value="25">25 kgs</option>
+                              <option value="50">50 kgs</option>
+                              <option value="75">75 kgs</option>
+                              <option value="100">100 kgs</option>
+                        </select>
+    	               </div> 
+                  </div> 
+                  <div>
+                      <button class="btn btn-lg btn-primary" ng-click="save();">save</button>
+                  </div>    
+                  <div style="margin-bottom:5px">
+    		              <label class="lbl" style="padding-left: 10px;">Amount :</label>
+    	           </div>
+    	           <div>
+    		              <table class="table table-bordered table-hover table-striped ">
+	   	                   <thead>
+	   	  	                    <tr>
+	   	  		                       <th >S.no</th>
+	   	  		                       <th>Rice Type</th>
+	   	  		                       <th>Quantity</th>
+	   	  		                       <th>Amount</th>
+	   	  		                       <th>Add/Remove</th>
+	   	  	                    </tr>
+	   	                     </thead>	
+	   	                     <tbody >
+	   	  	                     <tr  ng-repeat="place in placeOrder" >
+	   	  		                         <td ><span ><center>{{$index+1}}</center></span></td>{{data-column}}
+	   	  		                         <td >{{place.riceType}}</td>
+	   	  		                         <td ><center>{{place.quantity}}</center></td>
+	   	  		                         <td>Rs :{{m2}}</td>
+	   	  	                    </tr>
+	   	  	                    <tr>
+	   	  		                     <td colspan="5"><center><b  style="margin-left:20px">Total Amount :</b></center></td>
+	   	  	                    </tr>
+	   	                     </tbody>
+	   	               </table>
+    	           </div>
+          
+    
+          <div style="margin-bottom:5px">
+                <label class="lbl">Shipping Address :</label>
+         </div>
+    	   <fieldset style="border: 2px solid #c0c0c0 !important;margin-top:15px;padding: 0.35em 0.625em 0.75em;background-color:#f1f2f3;border-radius: 5px">
+              <div class="row">
+                      <div class="col-lg-3" style="margin-bottom: 5px;">
+                          <label style="margin-left:55px">Address:</label>  
+                      </div> 
+                      <div lass="col-lg-9" style="padding-left: 138px;">
+                        <div ng-repeat="addr in accDtl.address" >
+                            <span >{{addr.addressLine1}}</span><br>
+                            <span>{{addr.addressLine2}}</span><br>
+                            <span>{{addr.city}}</span><br>
+                            <span>{{addr.pin}}</span><br>
+                            <span>{{addr.state}}</span><br>
+                        </div>
+                    </div>
+              </div>  
+		    </fieldset>
+    	   <div style="margin-left:50px;margin-top:5px">
+    		    <button class="btn btn-primary" ng-click="submit()"> Submit </button>
+    		    <button class="btn btn-strong" style="margin-left:270px" > Cancel </button>
+    	   </div>
+         </fieldset>
+      </div>  
+     </div>  	
+      <div class="col-lg-2"></div>
+    </div>   
+      <div class="col-lg-2"></div>
 </div>
-<div>
+</div>
