--- a/app/views/templates/UserReg.html
+++ b/app/views/templates/UserReg.html
@@ -1,14 +1,14 @@
 <div class="container-fluid">
 <div class="row">
 	<div class="col-lg-2"></div>
-	<div class="col-lg-8" style="border: 3px solid #999; border-radius: 15px; min-height: 568px; max-height: inherit;">
+	<div class="col-lg-8 main-body-container">
 	
 	<div style="color:grey">
 		        <h3><u><center> User Registration </center></u></h3>
 		   </div>
 		<form>
 		<center>
-		<fieldset style="border: 5px solid #c18fbf !important;margin-top:25px;padding: 0.35em 0.625em 0.75em;background-color:#f1f2f3;border-radius: 5px;width: 401px;margin-bottom: 68px;">
+		<fieldset class="fieldset">
 		   
            <div class="row" style="margin-bottom: 5px; margin-top:25px">
 			 	<div class="col-lg-12">
