--- a/app/views/templates/login.html
+++ b/app/views/templates/login.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
 <div class="row">
 	<div class="col-lg-2"></div>
-	<div class="col-lg-8" style="border: 3px solid #999; border-radius: 15px; height: 458px">
+	<div class="col-lg-8 main-body-container">
 		<div class="row">
 		<div class="col-lg-7"></div>
 		<div class="col-lg-5">
