--- a/app/views/templates/productDtls.html
+++ b/app/views/templates/productDtls.html
@@ -1,7 +1,7 @@
 <div container-fluid>
 <div class="row">
 	<div class="col-lg-2"></div>
-	<div class="col-lg-8" style="border: 3px solid #999; border-radius: 15px; max-height:inherit">
+	<div class="col-lg-8 main-body-container">
 	<div class="row">
 	   <div class="col-lg-2" style="background-color:#ffffff;margin-top:10px;">
 	  	  <b><u style="padding:5px"> Brown Rice </u></b>
