--- a/app/views/templates/hello.html
+++ b/app/views/templates/hello.html
@@ -1,8 +1,10 @@
-
-<div> thhis is hello appliation </div>
-<input type="text" ng-model="t">
-
-<div>
-<button class="btn-btn-primary" ng-click="h();">hi</button>
-
-</div>
+<center>
+     <div> this is hello appliation </div>
+                  <div>
+                      First Name: <input type="text" ng-model="name">
+                   </div>
+                   <div>
+          <button class="btn-btn-primary" ng-click="hello();">hello</button>
+         hello...... {{firstName}}
+    </div>
+  </center>  
