--- a/app/views/templates/moreProDtls.html
+++ b/app/views/templates/moreProDtls.html
@@ -1,7 +1,7 @@
 <div container-fluid>
 <div class="row">
   <div class="col-lg-2"></div>
-	<div class="col-lg-8" style="border: 3px solid #999; border-radius: 15px; height: inherit">
+	<div class="col-lg-8 main-body-container">
 		<div style="margin-top:20px">
 		<span><b><u>Broun Rice Nutrition Facts :</u></b></span>
 		<p style="margin-left:35px; color:brown; font-size:15px;margin-top:5px;text-align: justify;">
