--- a/app/views/templates/trackMyOrder.html
+++ b/app/views/templates/trackMyOrder.html
@@ -1,14 +1,14 @@
 <div class="container-fluid">
 <div class="row">
 	<div class="col-lg-2"></div>
-	<div class="col-lg-8" style="border: 3px solid #999; border-radius: 15px;">
+	<div class="col-lg-8 main-body-container">
 		
 		<div style="font-size: large;padding-left: 89px;margin-top: 24px;color: seagreen">Thank  You For Using Our Services</div>
 		<div class="row">
 			<div class="col-lg-1"></div>
 			<div class="col-lg-10" >
 				<form>
-					<fieldset style="border: 2px solid #7a7a61 !important;margin-top:2px;padding: 0.35em 0.625em 0.75em;background-color:#f1f2f3;border-radius: 14px;margin-bottom: 61px;">
+					<fieldset class="fieldset">
                 <div class="col-lg-12" style="font-size:16px">
                     <div class="dropdown">
                           <img height="12" width="12" src="\images\dot.png">
